--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -10,6 +10,32 @@
   border-radius: 14px;
 }
 
+@media (max-width: 1024px) {
+  .__card {
+    display: flex;
+    flex-wrap: wrap;
+    flex: auto;
+    flex-direction: column;
+    background-color: $black2;
+    padding: 1.2rem;
+    border-radius: 14px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .__card {
+    display: flex;
+    flex-wrap: wrap;
+    flex: auto;
+    flex-direction: column;
+    background-color: $black2;
+    padding: 1.2rem;
+    border-radius: 14px;
+    width: 100%;
+  }
+}
+
 @media (max-width: 414px) {
   .__card {
     display: flex;
