--- a/src/components/CashPowerBalance/cashPowerBalance.module.scss
+++ b/src/components/CashPowerBalance/cashPowerBalance.module.scss
@@ -6,7 +6,8 @@
     margin: 0 0 47px;
     padding: 20px 34px 8px 16px;
     border-radius: 12px;
-    background-color: #17181a;
+    background-color: $black2;
+    box-shadow: inset 0 1px 24px 0 $lightBlack8;
 
     .__sidebar_cash_power_balance_wrapper {
       display: flex;
