--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -15,6 +15,7 @@ $lightBlack5: #35363a;
 $lightBlack6: #f2f2f233;
 $lightBlack7: #7f7f7f0f;
 $lightBlack8: #00000080;
+$lightBlack9: #00000057;
 $lightGrey: #303133;
 $lightGrey1: #d8d8d8;
 $lightGrey2: #c7cad1;
