--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -12,6 +12,7 @@ $lightBlack4: #232529;
 $lightBlack5: #35363a;
 $lightBlack6: #f2f2f233;
 $lightBlack7: #7f7f7f0f;
+$lightBlack8: rgba(99, 99, 99, 0.24);
 $lightGrey: #303133;
 $lightGrey1: #d8d8d8;
 $lightGrey2: #c7cad1;
@@ -19,7 +20,9 @@ $lightGrey3: #f7f7f7;
 $lightGrey4: #a7a7a7;
 $black2: #17181a;
 $black3: rgba(17, 17, 17, 0.8);
+$black4: rgba(17, 17, 17, 0.6);
 $white: #fff;
+$white1: rgba(255, 255, 255, 0.6);
 $grey: #979797;
 $grey2: #f2f2f2;
 $grey3: #a9a9a9;
@@ -29,6 +32,7 @@ $grey6: #f2f2f299;
 $grey7: #4d5255;
 $grey8: #3e4345;
 $grey9: #7f7f7f;
+$grey10: rgba(242, 242, 242, 0.1);
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
