--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -191,13 +191,15 @@ label {
 
 .__outline-badge {
   padding: 0.54em 1.2em;
-  border: 2px solid;
   font-size: 0.94em;
-  border-radius: 0.6em;
+  border-radius: 12px;
   background: #555658;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(99, 99, 99, 0.24);
+  width: 120px;
+  height: 48px;
   svg {
     margin-right: 0.4em;
   }
@@ -205,6 +207,7 @@ label {
     color: $primary;
     font-weight: 500;
     background-color: rgba(99, 99, 99, 0.24);
+    border: 2px solid;
   }
 }
 .__pointer {
