--- a/src/ui/Select/Select.scss
+++ b/src/ui/Select/Select.scss
@@ -1,29 +1,33 @@
-.__Select-field-style-2 {
-  color: #000000;
-  margin: 1.1em 0;
-  position: relative;
+@import "../../scss/colors.scss";
+
+.w-50 {
+  width: 50%;
+}
+.w-100 {
+  width: 100%;
+}
+.__select_container {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 0px;
   label {
     margin-bottom: 0.5em;
     display: block;
     font-weight: 500;
+    height: 20px;
   }
-  Select {
-    border: 1px solid #e0e0e0;
-    width: 100%;
-    display: block;
-    padding: 1.22em 2.8em 1.22em 1.4em;
-    font-family: inherit;
-    font-size: inherit;
+  select {
     outline: none;
-    border-radius: 0.3em;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    &::-ms-expand {
-      display: none;
-    }
+    padding: 20px;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    border: 2px solid $lightGrey2;
+    border-radius: 6px;
+    background: url("../../assets/down-arrow.png") $white no-repeat 96%;
+    background-size: 12px;
   }
-  .__chevron {
-    bottom: 1.3em;
-    right: 1.4em;
+  .white {
+    background-color: $white;
   }
 }
