power center card next and back button will go to the start, on My Account added two new accordians and also added one new tab History

--- a/src/components/Accordian/index.module.scss
+++ b/src/components/Accordian/index.module.scss
@@ -18,6 +18,10 @@
       cursor: pointer;
     }
 
+    .accoridan_bar_icon {
+      display: flex;
+    }
+
     .accoridan_bar_right {
       color: $primary;
       font-size: 16px;
