--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,10 +1,11 @@
 $primary: #fb6e00;
 $lightPrimary: #fb6e001a;
 $primaryLight: #fb6e0033;
-$primaryLight2: rgba(251, 110, 0, 0.6);
+$primaryLight2: #fb6e0099;
 $primaryLight3: #fb6e0061;
 $primaryLight4: #e63f2f26;
 $primaryLight5: #fb6e004d;
+$primaryLight6: #fb6d0025;
 $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
@@ -17,6 +18,7 @@ $lightBlack7: #7f7f7f0f;
 $lightBlack8: #00000080;
 $lightBlack9: #00000057;
 $lightBlack10: rgba(99, 99, 99, 0.24);
+$lightBlack11: #00000024;
 $lightGrey: #303133;
 $lightGrey1: #d8d8d8;
 $lightGrey2: #c7cad1;
@@ -46,8 +48,10 @@ $danger: #e7304e;
 $danger2: #fa3800;
 $danger3: #e03c2d;
 $danger4: #ad2e23;
+$danger5: #e63f2f;
 $success: #1bbc86;
 $successLight: #2b69304d;
+$successLight2: #2b69301a;
 $green: #4bb654;
 $yellow: #fbbc15;
 $orangeRed: #f44336;
