--- a/src/components/ToolTip/index.module.scss
+++ b/src/components/ToolTip/index.module.scss
@@ -3,7 +3,7 @@
 :root {
     --tooltip-margin: 30px;
     --tooltip-arrow-size: 10px;
-  }
+}
 
 .wrapper {
     display: inline-block;
@@ -21,7 +21,7 @@
         background-color: $lightBlack2;
         transform: translateX(-50%) translateY(5px);
         box-shadow: 2px 14px 59px 0 $lightBlack9;
-        padding: 9px;
+        padding: 9px 9px 2px 9px;
         z-index: 100;
         border-radius: 8px;
         white-space: nowrap;
