--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -57,4 +57,6 @@ $yellow: #fbbc15;
 $orangeRed: #f44336;
 $offwhite: #e0e0e0;
 $lightBlue: #688fbd;
+$lightBlue2: #8cc2ff;
+$lightBlue3: #6890bd7c;
 $divider: #efefef;
