--- a/src/components/SportsLiveCardSelection/index.module.scss
+++ b/src/components/SportsLiveCardSelection/index.module.scss
@@ -98,10 +98,17 @@
 		background-color: $lightBlack;
 		box-shadow: 0 2px 24px 0 $lightBlack8;
 		width: 100%;
-		height: 284px;
 		border-radius: 8px;
 		padding: 0;
 		margin: 0;
+
+		&.height {
+			height: 284px;
+		}
+
+		&.compressed {
+			padding-bottom: 10px;
+		}
 	}
 
 	p {
@@ -195,8 +202,6 @@
 				}
 	
 				.states_points_right {
-					display: flex;
-					flex-direction: column;
 					margin: 0 10px 0 0;
 					
 					.points_right_1 {
@@ -208,11 +213,6 @@
 						flex-direction: row;
 						justify-content: space-evenly;
 						align-items: center;
-
-						svg {
-							margin: 0 0 0 10px;
-							display: flex;
-						}
 	
 						span {
 							color: $grey2;
@@ -221,6 +221,17 @@
 							font-weight: 600;
 							text-align: center;
 							width: 100%;
+						}
+
+						.state_xp {
+							margin: 0;
+							padding: 0;
+							display: flex;
+							
+							svg {
+								margin: 0;
+								padding: 0;
+							}
 						}
 					}
 				}
@@ -271,6 +282,7 @@
 						padding: 3px 8px;
 						font-weight: bold;
 						width: 100%;
+						opacity: 0.8;
 					}
 
 					.p_2 {
@@ -293,6 +305,22 @@
 			align-items: flex-end;
 			display: flex;
 			pointer-events: none;
+
+			.footer_back {
+				left: 0;
+				display: flex;
+				transform: translate(-120px, 7px);
+				pointer-events: painted;
+				color: $primary;
+				
+				&:hover {
+					cursor: pointer;
+				}
+
+			}
+			.left_align {
+				transform: translate(-170px, 12px);
+			}
 			
 			.card_details {
 				cursor: pointer;
@@ -309,10 +337,16 @@
 				padding: 2px;
 				display: inline-block;
 				margin: 0 0 0 0;
+				width: 10;
+				height: 10;
 			  }
 		
 			  .right {
-				transform: rotate(-45deg) translate(-5px, -5px);
+				transform: rotate(-45deg) translate(-2px, -6px);
+			  }
+
+			  .left {
+				transform: rotate(135deg) translate(-9px, 0px);
 			  }
 		}
 
@@ -360,6 +394,11 @@
 					flex-direction: column;
 					font-weight: 600;
 					margin: 6px 0 0 0;
+					max-height: 70px;
+
+					&.overflow {
+						overflow: hidden scroll;
+					}
 
 					>div {
 						display: flex;
