power center learn more modal completed

--- a/src/components/PowerCenterCardDetails/powersAvailable.module.scss
+++ b/src/components/PowerCenterCardDetails/powersAvailable.module.scss
@@ -31,6 +31,7 @@
             display: flex;
             justify-content: center;
             align-items: flex-end;
+            cursor: pointer;
 
             .__powers_available_learn_more_text {
                 width: 68px;
