--- a/src/components/PowerCenterCard/powerCenterCard.module.scss
+++ b/src/components/PowerCenterCard/powerCenterCard.module.scss
@@ -121,38 +121,8 @@
     .__power_center_card_status_and_details {
         display: flex;
         flex-direction: row;
-        
-        .__power_center_card_status_text {
-            p {
-                width: 100%;
-                height: 20px;
-                margin: 3px 9px 0 20px;
-                font-family: Poppins;
-                font-size: 14px;
-                font-weight: 300;
-                font-stretch: normal;
-                font-style: normal;
-                line-height: normal;
-                letter-spacing: normal;
-                color: $white1;
-            }
-        }
-
-        .__power_center_card_progress_bar_outer {
-            width: 80px;
-            height: 6px;
-            margin: 10px 0 7px 9px;
-            padding: 1px 55px 1px 1px;
-            border-radius: 3px;
-            background-color: $grey10;
-
-            .__power_center_card_progress_bar_inner {
-                width: 24px;
-                height: 4px;
-                border-radius: 3px;
-                background-color: $primary;
-            }
-        }
+        align-items: center;
+        margin-top: 20px;
 
         .__power_center_card_details {
             display: flex;
