--- a/src/components/PowerCenterCardDetails/pointSystem.module.scss
+++ b/src/components/PowerCenterCardDetails/pointSystem.module.scss
@@ -1,9 +1,9 @@
 @import '../../scss/colors.scss';
 
-.__prize_payouts {
+.__point_system {
     margin-left: 20px;
 
-    .__prize_payouts_title {
+    .__point_system_title {
         width: 100%;
         height: 23px;
         margin-top: 10px;
@@ -17,16 +17,18 @@
         letter-spacing: normal;
         color: $grey2;
         text-decoration: underline;
+        text-align: center;
     }
-
-    .__prize_payouts_data {
+    
+    .__point_system_data {
         display: flex;
         flex-direction: row;
 
-        .__prize_payouts_data_title_div {
+        .__point_system_data_title_div {
             display: flex;
-            flex: 1;
-            .__prize_payouts_data_title {
+            flex: 2;
+            
+            .__point_system_data_title {
                 width: 100%;
                 height: 18px;
                 margin-bottom: 5px;
@@ -41,10 +43,11 @@
             }
         }
 
-        .__prize_payouts_data_value_div {
+        .__point_system_data_value_div {
             display: flex;
             flex: 1;
-            .__prize_payouts_data_value {
+
+            .__point_system_data_value {
                 width: 100%;
                 height: 18px;
                 margin-bottom: 5px;
@@ -59,5 +62,19 @@
                 color: $lightBlue;
             }
         }
+    }
+
+    .__point_system_heading {
+        width: 61px;
+        height: 23px;
+        margin: 0 134px 4px 0;
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 600;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $lightBlue;
     }
 }
