--- a/src/components/PowerCenterCardDetails/prizeGrid.module.scss
+++ b/src/components/PowerCenterCardDetails/prizeGrid.module.scss
@@ -1,9 +1,9 @@
 @import '../../scss/colors.scss';
 
-.__hitters {
+.__prize_grid {
     margin-left: 20px;
 
-    .__hitters_title {
+    .__prize_grid_title {
         width: 100%;
         height: 23px;
         margin-top: 10px;
@@ -20,14 +20,14 @@
         text-align: center;
     }
 
-    .__hitters_data {
+    .__prize_grid_data {
         display: flex;
         flex-direction: row;
 
-        .__hitters_data_title_div {
+        .__prize_grid_data_title_div {
             display: flex;
             flex: 1;
-            .__hitters_data_title {
+            .__prize_grid_data_title {
                 width: 100%;
                 height: 18px;
                 margin-bottom: 5px;
@@ -42,10 +42,10 @@
             }
         }
 
-        .__hitters_data_value_div {
+        .__prize_grid_data_value_div {
             display: flex;
             flex: 1;
-            .__hitters_data_value {
+            .__prize_grid_data_value {
                 width: 100%;
                 height: 18px;
                 margin-bottom: 5px;
