--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -40,6 +40,7 @@ $grey7: #4d5255;
 $grey8: #3e4345;
 $grey9: #7f7f7f;
 $grey10: rgba(242, 242, 242, 0.1);
+$grey11: rgba(242, 242, 242, 0.75);
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
