--- a/src/components/ToolTip/index.module.scss
+++ b/src/components/ToolTip/index.module.scss
@@ -8,6 +8,10 @@
 .wrapper {
     display: inline-block;
     position: relative;
+
+    &.disabled_wrapper {
+        pointer-events: none;
+    }
     
     .children {
         margin: 0;
@@ -15,6 +19,11 @@
 
         &:hover {
             cursor: pointer;
+        }
+
+        &.disabled {
+            pointer-events: none;
+            opacity: 0.4;
         }
     }
 
