--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -6,6 +6,7 @@ $primaryLight3: #fb6e0061;
 $primaryLight4: #e63f2f26;
 $primaryLight5: #fb6e004d;
 $primaryLight6: #fb6d0025;
+$primaryLight7: #c7570033;
 $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
