--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -5,6 +5,7 @@ $primaryLight2: rgba(251, 110, 0, 0.6);
 $primaryLight3: #fb6e0061;
 $primaryLight4: #e63f2f26;
 $primaryLight5: #fb6e004d;
+$primaryLight6: rgba(251, 110, 0, 0.1);
 $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
