--- a/src/components/HomePageContentHeader/index.module.scss
+++ b/src/components/HomePageContentHeader/index.module.scss
@@ -1,9 +1,8 @@
 @import "../../scss/colors.scss";
 
 .header_wrapper {
-  background-image: url("../../assets/HomePageViewPortImage.jpg");
+  background-image: url("../../assets/home_page_header_background.png");
   background-repeat: no-repeat;
-  background-size: cover;
 
   .header_main {
     display: flex;
@@ -18,8 +17,8 @@
       font-weight: bold;
       border-radius: 6px;
       letter-spacing: -0.5px;
-      text-shadow: 0 2px 14px rgba(0, 0, 0, 0.5);
-      margin: 9em 0 10px 0;
+      text-shadow: 0 2px 14px $black5;
+      margin: 8.6em 0 10px 0;
 
       sup {
         font-size: 18px;
@@ -44,7 +43,19 @@
       font-size: 18px;
 
       .p1 {
-        width: 57%;
+        width: 392px;
+        height: 75px;
+        margin: 30px 75px;
+        text-shadow: 0 2px 14px $black5;
+        font-family: Poppins;
+        font-size: 18px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 0.13px;
+        text-align: center;
+        color: $white;
       }
 
       .p2 {
@@ -69,19 +80,45 @@
 
     .p3 {
       display: flex;
-      font-size: 14px;
       width: 90%;
       justify-content: flex-end;
+      height: 20px;
+      margin: 62px 100px 15px 140px;
+      font-family: Poppins;
+      font-size: 14px;
+      font-weight: 300;
+      font-stretch: normal;
       font-style: italic;
+      line-height: normal;
+      letter-spacing: normal;
+      color: $white;
+    }
+
+    .header_main_power_up_btn {
+      width: 236px;
+      height: 48px;
+      margin: 30px 153px 0;
+      border-radius: 6px;
+      box-shadow: 0 0 14px 0 $black5;
+      border: solid 2px $primary;
+      background-color: $primaryLight2;
+      font-family: Teko;
+      font-size: 26px;
+      font-weight: 500;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      color: #f2f2f2;
+      outline: none;
     }
   }
 }
 
 @media (max-width: 1280px) {
   .header_wrapper {
-    background-image: url("../../assets/HomePageViewPortImage.jpg");
+    background-image: url("../../assets/home_page_header_background.png");
     background-repeat: no-repeat;
-    background-size: cover;
 
     .header_main {
       display: flex;
@@ -96,8 +133,8 @@
         font-weight: bold;
         border-radius: 6px;
         letter-spacing: -0.5px;
-        text-shadow: 0 2px 14px rgba(0, 0, 0, 0.5);
-        margin: 9em 0 10px 0;
+        text-shadow: 0 2px 14px $black5;
+        margin: 8.6em 0 10px 0;
 
         sup {
           font-size: 14px;
@@ -122,7 +159,19 @@
         font-size: 18px;
 
         .p1 {
-          width: 57%;
+          width: 392px;
+          height: 75px;
+          margin: 30px 75px;
+          text-shadow: 0 2px 14px $black5;
+          font-family: Poppins;
+          font-size: 18px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: 0.13px;
+          text-align: center;
+          color: $white;
         }
 
         .p2 {
@@ -140,13 +189,32 @@
           margin: 3em 0 0 0;
         }
       }
+
+      .header_main_power_up_btn {
+        width: 236px;
+        height: 48px;
+        margin: 30px 153px 0;
+        border-radius: 6px;
+        box-shadow: 0 0 14px 0 $black5;
+        border: solid 2px $primary;
+        background-color: $primaryLight2;
+        font-family: Teko;
+        font-size: 26px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #f2f2f2;
+        outline: none;
+      }
     }
   }
 }
 
 @media (max-width: 1124px) {
   .header_wrapper {
-    background-image: url("../../assets/HomePageViewPortImage.jpg");
+    background-image: url("../../assets/home_page_header_background.png");
     background-repeat: no-repeat;
     background-size: 100%;
 
@@ -163,8 +231,8 @@
         font-weight: bold;
         border-radius: 6px;
         letter-spacing: -0.5px;
-        text-shadow: 0 2px 14px rgba(0, 0, 0, 0.5);
-        margin: 9em 0 10px 0;
+        text-shadow: 0 2px 14px $black5;
+        margin: 8.6em 0 10px 0;
 
         sup {
           font-size: 12px;
@@ -189,7 +257,19 @@
         font-size: 12px;
 
         .p1 {
-          width: 57%;
+          width: 392px;
+          height: 75px;
+          margin: 30px 75px;
+          text-shadow: 0 2px 14px $black5;
+          font-family: Poppins;
+          font-size: 18px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: 0.13px;
+          text-align: center;
+          color: $white;
         }
 
         .p2 {
@@ -210,9 +290,37 @@
 
       .p3 {
         display: flex;
-        font-size: 10px;
         width: 90%;
         justify-content: flex-end;
+        height: 20px;
+        margin: 62px 100px 15px 140px;
+        font-family: Poppins;
+        font-size: 14px;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: italic;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $white;
+      }
+
+      .header_main_power_up_btn {
+        width: 236px;
+        height: 48px;
+        margin: 30px 153px 0;
+        border-radius: 6px;
+        box-shadow: 0 0 14px 0 $black5;
+        border: solid 2px $primary;
+        background-color: $primaryLight2;
+        font-family: Teko;
+        font-size: 26px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #f2f2f2;
+        outline: none;
       }
     }
   }
@@ -220,7 +328,7 @@
 
 @media (max-width: 1024px) {
   .header_wrapper {
-    background-image: url("../../assets/HomePageViewPortImage.jpg");
+    background-image: url("../../assets/home_page_header_background.png");
     background-repeat: no-repeat;
     background-size: 100%;
 
@@ -237,8 +345,8 @@
         font-weight: 600;
         border-radius: 6px;
         letter-spacing: -0.5px;
-        text-shadow: 0 2px 14px rgba(0, 0, 0, 0.5);
-        margin: 9em 0 10px 0;
+        text-shadow: 0 2px 14px $black5;
+        margin: 8.6em 0 10px 0;
 
         sup {
           font-size: 12px;
@@ -263,7 +371,19 @@
         font-size: 14px;
 
         .p1 {
-          width: 57%;
+          width: 392px;
+          height: 75px;
+          margin: 20px 75px;
+          text-shadow: 0 2px 14px $black5;
+          font-family: Poppins;
+          font-size: 18px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: 0.13px;
+          text-align: center;
+          color: $white;
         }
 
         .p2 {
@@ -288,9 +408,37 @@
 
       .p3 {
         display: flex;
-        font-size: 10px;
         width: 90%;
         justify-content: flex-end;
+        height: 20px;
+        margin: 21px 100px 15px 140px;
+        font-family: Poppins;
+        font-size: 14px;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: italic;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $white;
+      }
+
+      .header_main_power_up_btn {
+        width: 236px;
+        height: 48px;
+        margin: 20px 153px 0;
+        border-radius: 6px;
+        box-shadow: 0 0 14px 0 $black5;
+        border: solid 2px $primary;
+        background-color: $primaryLight2;
+        font-family: Teko;
+        font-size: 26px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #f2f2f2;
+        outline: none;
       }
     }
   }
@@ -298,7 +446,7 @@
 
 @media (max-width: 540px) {
   .header_wrapper {
-    background-image: url("../../assets/HomePageViewPortImage.jpg");
+    background-image: url("../../assets/home_page_header_background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: 4em 0 0 0;
@@ -346,7 +494,19 @@
         font-size: 14px;
 
         .p1 {
-          width: 57%;
+          width: 392px;
+          height: 75px;
+          margin: 30px 75px;
+          text-shadow: 0 2px 14px $black5;
+          font-family: Poppins;
+          font-size: 18px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: 0.13px;
+          text-align: center;
+          color: $white;
         }
 
         .p2 {
@@ -375,10 +535,37 @@
 
       .p3 {
         display: flex;
+        width: 90%;
+        justify-content: flex-end;
+        height: 20px;
+        margin: 62px 100px 15px 140px;
+        font-family: Poppins;
         font-size: 14px;
-        width: 100%;
-        justify-content: center;
-        color: grey;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: italic;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $white;
+      }
+
+      .header_main_power_up_btn {
+        width: 236px;
+        height: 48px;
+        margin: 30px 153px 0;
+        border-radius: 6px;
+        box-shadow: 0 0 14px 0 $black5;
+        border: solid 2px $primary;
+        background-color: $primaryLight2;
+        font-family: Teko;
+        font-size: 26px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #f2f2f2;
+        outline: none;
       }
     }
   }
@@ -386,7 +573,7 @@
 
 @media (max-width: 414px) {
   .header_wrapper {
-    background-image: url("../../assets/viewport_mobile.png");
+    background-image: url("../../assets/home_page_header_background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: 4.5em 0 0 0;
@@ -463,10 +650,37 @@
 
       .p3 {
         display: flex;
+        width: 90%;
+        justify-content: flex-end;
+        height: 20px;
+        margin: 62px 100px 15px 140px;
+        font-family: Poppins;
         font-size: 14px;
-        width: 100%;
-        justify-content: center;
-        color: grey;
+        font-weight: 300;
+        font-stretch: normal;
+        font-style: italic;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $white;
+      }
+
+      .header_main_power_up_btn {
+        width: 236px;
+        height: 48px;
+        margin: 30px 153px 0;
+        border-radius: 6px;
+        box-shadow: 0 0 14px 0 $black5;
+        border: solid 2px $primary;
+        background-color: $primaryLight2;
+        font-family: Teko;
+        font-size: 26px;
+        font-weight: 500;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #f2f2f2;
+        outline: none;
       }
     }
   }
@@ -474,7 +688,7 @@
 
 @media (max-width: 360px) {
   .header_wrapper {
-    background-image: url("../../assets/viewport_mobile.png");
+    background-image: url("../../assets/home_page_header_background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: 4.5em 0 0 0;
