--- a/src/components/PowerCenterCardDetails/hitters.module.scss
+++ b/src/components/PowerCenterCardDetails/hitters.module.scss
@@ -2,8 +2,9 @@
 
 .__hitters {
     margin-left: 20px;
+    margin-right: 20px;
 
-    .__hitters_title {
+    .__hitters_main_title {
         width: 100%;
         height: 23px;
         margin-top: 10px;
@@ -60,5 +61,19 @@
                 color: $lightBlue;
             }
         }
+    }
+
+    .__hitters_heading {
+        width: 61px;
+        height: 23px;
+        margin: 0 134px 4px 0;
+        font-family: Poppins;
+        font-size: 16px;
+        font-weight: 600;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $lightBlue;
     }
 }
