--- a/src/components/PowerCenterCardDetails/pointSystem.module.scss
+++ b/src/components/PowerCenterCardDetails/pointSystem.module.scss
@@ -2,7 +2,8 @@
 
 .__point_system {
     margin-left: 20px;
-
+    margin-right: 20px;
+    
     .__point_system_title {
         width: 100%;
         height: 23px;
