--- a/src/components/PowerCenterCardDetails/prizeGrid.module.scss
+++ b/src/components/PowerCenterCardDetails/prizeGrid.module.scss
@@ -2,7 +2,8 @@
 
 .__prize_grid {
     margin-left: 20px;
-
+    margin-right: 20px;
+    
     .__prize_grid_title {
         width: 100%;
         height: 23px;
@@ -27,6 +28,7 @@
         .__prize_grid_data_title_div {
             display: flex;
             flex: 1;
+
             .__prize_grid_data_title {
                 width: 100%;
                 height: 18px;
@@ -45,11 +47,12 @@
         .__prize_grid_data_value_div {
             display: flex;
             flex: 1;
+            margin-right: 35px;
+
             .__prize_grid_data_value {
                 width: 100%;
                 height: 18px;
                 margin-bottom: 5px;
-
                 font-family: Poppins;
                 font-size: 14px;
                 font-weight: 600;
