--- a/src/pages/NHLPowerdfsLive/SingleView/index.module.scss
+++ b/src/pages/NHLPowerdfsLive/SingleView/index.module.scss
@@ -53,6 +53,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
+                align-items: center;
                 padding: 0 1px;
                 font-size: 12px;
                 text-transform: capitalize;
@@ -61,7 +62,17 @@
 
                 .card_cat {
                     text-transform: uppercase;
-                }                
+                }
+                
+                .card_xp_points {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    svg {
+                        margin: 0 0 0 5px;
+                    }
+                }
             }
 
             .card_type {
