Card Selection in single view

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -19,7 +19,7 @@ $lightBlack6: #f2f2f233;
 $lightBlack7: #7f7f7f0f;
 $lightBlack8: #00000080;
 $lightBlack9: #00000057;
-$lightBlack10: rgba(99, 99, 99, 0.24);
+$lightBlack10: #6363633d;
 $lightBlack11: #292a2e;
 $lightBlack12: #00000024;
 $lightGrey: #303133;
@@ -29,11 +29,11 @@ $lightGrey3: #f7f7f7;
 $lightGrey4: #a7a7a7;
 $lightGrey5: #ffffff0d;;
 $black2: #17181a;
-$black3: rgba(17, 17, 17, 0.8);
-$black4: rgba(17, 17, 17, 0.6);
-$black5: rgba(0, 0, 0, 0.5);
+$black3: #111111cc;
+$black4: #11111199;
+$black5: #00000080;
 $white: #fff;
-$white1: rgba(255, 255, 255, 0.6);
+$white1: #ffffff99;
 $grey: #979797;
 $grey2: #f2f2f2;
 $grey3: #a9a9a9;
@@ -43,8 +43,8 @@ $grey6: #f2f2f299;
 $grey7: #4d5255;
 $grey8: #3e4345;
 $grey9: #7f7f7f;
-$grey10: rgba(242, 242, 242, 0.1);
-$grey11: rgba(242, 242, 242, 0.75);
+$grey10: #f2f2f21a;
+$grey11: #f2f2f2bf;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
