--- a/src/components/SportsLiveCardSelection/index.module.scss
+++ b/src/components/SportsLiveCardSelection/index.module.scss
@@ -16,7 +16,7 @@
 			flex-direction: column;
 			width: 100px;
 			font-size: 23px;
-			text-transform: capitalize;
+			text-transform: uppercase;
 			font-weight: bold;
 
 			span {
@@ -24,6 +24,10 @@
 				height: 5px;
 				background-color: $primary;
 				border-radius: 8px;
+			}
+
+			&.teamD {
+				text-transform: capitalize;
 			}
 		}
 
@@ -80,6 +84,13 @@
 		.card_title_right {
 			display: flex;
 			transform: translate(-10px, 0px);
+
+			svg {
+
+				&:hover {
+					cursor: pointer;
+				}
+			}
 		}
 	}
 
@@ -469,6 +480,54 @@
 			width: 20px;
 			height: 20px;
 			margin-right: 5px;
+		}
+	}
+}
+
+.modal_container {
+	display: flex;
+	width: 75%;
+
+	.modal_header {
+		display: flex;
+		justify-content: space-between;
+		margin: 25px 0 5px 0;
+
+		.title {
+			font-size: 52px;
+			font-family: Teko;
+			padding: 0;
+			margin: 0;
+		}
+
+		svg {
+			opacity: 0.8;
+
+			&:hover {
+				cursor: pointer;
+				opacity: 1;
+			}
+		}
+	}
+
+	.modal_body {
+		display: flex;
+		flex-direction: column;
+		background-color: $black;
+		border-radius: 11px;
+		justify-content: center;
+		align-items: center;
+		overflow: hidden scroll;
+
+		&::-webkit-scrollbar {
+			width: 0;
+		}
+
+		.modal_body_content {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-evenly;
+			align-items: center;
 		}
 	}
 }
