--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
 @import './colors.scss', './flex.scss', './layouts.scss', './styles.scss';
 
 *{
