react-select library removed and custom drop down created

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -64,4 +64,5 @@ $offwhite: #e0e0e0;
 $lightBlue: #688fbd;
 $lightBlue2: #8cc2ff;
 $lightBlue3: #6890bd7c;
+$lightBlue4: #6890bde5;
 $divider: #efefef;
