--- a/src/components/SportsSelectionCard/index.module.scss
+++ b/src/components/SportsSelectionCard/index.module.scss
@@ -51,6 +51,9 @@
 			width: 84px;
 			height: 28px;
 			border-radius: 4px;
+			display: flex;
+			align-items: center;
+			justify-content: space-evenly;
 
 			&:hover {
 				cursor: pointer;
